src/org/api/core/2.0.26/core.imessagequeue.md
---
title: "IMessageQueue interface · @imqueue/core v2.0.26 (archived)"
description: "Generic messaging queue implementation interface"
apiCrumbs: [{"name":"API reference","url":"/api/"},{"name":"@imqueue/core","url":"/api/core/2.0.26/"},{"name":"IMessageQueue","url":"/api/core/2.0.26/core.imessagequeue/"}]
noindex: true
latestUrl: "/api/core/latest/core.imessagequeue/"
---

<!-- Do not edit this file. It is automatically generated by API Documenter. -->

# IMessageQueue interface

Generic messaging queue implementation interface

**Signature:**

```typescript
export interface IMessageQueue extends EventEmitter<EventMap> 
```
**Extends:** EventEmitter&lt;[EventMap](/api/core/2.0.26/core.eventmap/)<!-- -->&gt;

## Example

\~\~\~typescript import { IMessageQueue, EventEmitter, uuid } from '<!-- -->@<!-- -->imqueue/core';

class SomeMQAdapter implements IMessageQueue extends EventEmitter { public async start(): Promise<SomeMQAdapter> { // ... implementation goes here return this; } public async stop(): Promise<SomeMQAdapter> { // ... implementation goes here return this; } public async send( toQueue: string, message: JsonObject, delay?: number ): Promise<string> { const messageId = uuid(); // ... implementation goes here return messageId; } public async destroy(): Promise<void> { // ... implementation goes here } public async clear(): Promise<SomeMQAdapter> { // ... implementation goes here return this; } } \~\~\~

## Methods

<table><thead><tr><th>

Method


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[clear()](/api/core/2.0.26/core.imessagequeue.clear/)


</td><td>

Clears queue data in queue host application. Supposed to be an async function.


</td></tr>
<tr><td>

[destroy()](/api/core/2.0.26/core.imessagequeue.destroy/)


</td><td>

Safely destroys current queue, unregistered all set event listeners and connections. Supposed to be an async function.


</td></tr>
<tr><td>

[publish(data, toName)](/api/core/2.0.26/core.imessagequeue.publish/)


</td><td>

Publishes data to current queue channel

If toName specified will publish to pubsub with different name. This can be used to implement broadcasting some messages to other subscribers on other pubsub channels. Different name should be in the same namespace (same imq prefix)


</td></tr>
<tr><td>

[queueLength()](/api/core/2.0.26/core.imessagequeue.queuelength/)


</td><td>

Retrieves the current count of messages in the queue. Supposed to be an async function.


</td></tr>
<tr><td>

[send(toQueue, message, delay, errorHandler)](/api/core/2.0.26/core.imessagequeue.send/)


</td><td>

Sends a message to given queue name with the given data. Supposed to be an async function.


</td></tr>
<tr><td>

[start()](/api/core/2.0.26/core.imessagequeue.start/)


</td><td>

Starts the messaging queue. Supposed to be an async function.


</td></tr>
<tr><td>

[stop()](/api/core/2.0.26/core.imessagequeue.stop/)


</td><td>

Stops the queue (should stop handle queue messages). Supposed to be an async function.


</td></tr>
<tr><td>

[subscribe(channel, handler)](/api/core/2.0.26/core.imessagequeue.subscribe/)


</td><td>

Creates or uses subscription channel with the given name and sets message handler on data receive


</td></tr>
<tr><td>

[unsubscribe()](/api/core/2.0.26/core.imessagequeue.unsubscribe/)


</td><td>

Closes subscription channel

 {<!-- -->Promise<void>}


</td></tr>
</tbody></table>

